# gin-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  dirctory_structure  feature_list  todolist  todonow
docs/: api_reference.md  design_principles.md  getting_started.md
docs/howto/: deploy_with_docker.md
docs/modules/: core.md
include/mycppwebfw/context/: context.h
include/mycppwebfw/core/: signal_handler.h  thread_pool.h
include/mycppwebfw/middleware/: auth.h  base_middleware.h  error_handler.h  logger.h  rate_limiter.h  request_id.h  session.h
include/mycppwebfw/utils/: middleware_utils.h  request_id_generator.h
mycppwebfw/: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
mycppwebfw/.github/workflows/: cd.yml  ci.yml
mycppwebfw/benchmarks/: CMakeLists.txt
mycppwebfw/benchmarks/core_bench/: server_bench.cpp
mycppwebfw/benchmarks/http_bench/: parser_bench.cpp
mycppwebfw/benchmarks/middleware_bench/: rate_limiter_bench.cpp
mycppwebfw/benchmarks/perf_utils/: benchmark_helpers.cpp
mycppwebfw/benchmarks/routing_bench/: router_bench.cpp
mycppwebfw/cmake/: FindAsio.cmake  FindGTest.cmake  macros.cmake
mycppwebfw/config/: app.default.json  logging.default.yaml  routes.default.toml  security.default.yaml
mycppwebfw/devtools/: CMakeLists.txt  route_inspector.cpp  route_inspector.h
mycppwebfw/docker/: Dockerfile
mycppwebfw/docs/howto/: deploy_with_docker.md  integrate_prometheus.md  writing_middleware.md
mycppwebfw/docs/modules/: auth.md  core.md  form.md  http.md  json.md  middleware.md  routing.md  security.md  session.md  ssl.md  staticfiles.md  utils.md  websocket.md
mycppwebfw/examples/full_app/: CMakeLists.txt  main.cpp
mycppwebfw/examples/hello_world/: CMakeLists.txt  main.cpp
mycppwebfw/examples/microservice/: CMakeLists.txt
mycppwebfw/examples/rest_api/: CMakeLists.txt  app.cpp
mycppwebfw/examples/websocket_demo/: CMakeLists.txt  ws_server.cpp
mycppwebfw/include/logging/: logger.h
mycppwebfw/include/mycppwebfw/core/: buffer_pool.h  connection.h  connection_manager.h  server.h  signal_handler.h  thread_pool.h
mycppwebfw/include/mycppwebfw/form/: multipart.h  urlencoded.h
mycppwebfw/include/mycppwebfw/http/: header.h  parser.h  request.h  response.h
mycppwebfw/include/mycppwebfw/middleware/: auth.h  compression.h  cors.h  error_handler.h  logger.h  middleware.h  middleware_chain.h  request_id.h  session.h
mycppwebfw/include/mycppwebfw/routing/: parameter_parser.h  route_matcher.h  router.h
mycppwebfw/include/mycppwebfw/security/: csrf.h
mycppwebfw/include/mycppwebfw/utils/: api_key_registry.h  config.h  jwt_parser.h  logger.h  metrics.h  request_id_generator.h  session_store.h
mycppwebfw/include/mycppwebfw/websocket/: websocket.h
mycppwebfw/src/: CMakeLists.txt
mycppwebfw/src/auth/: oauth2.h
mycppwebfw/src/core/: buffer_pool.cpp  connection.cpp  connection.tpp  connection_manager.cpp  connection_manager.tpp  server.cpp  signal_handler.cpp  signal_handler.h  thread_pool.cpp  thread_pool.h
mycppwebfw/src/http/: content_negotiation.h  parser.cpp  request.cpp  response.cpp
mycppwebfw/src/json/: json_adapter.h
mycppwebfw/src/logging/: error_logger.cpp  error_logger.h  formatter.cpp  formatter.h  logger.cpp  sinks.cpp  sinks.h
mycppwebfw/src/middleware/: auth.cpp  chain.h  compression.h  compression_impl.h  cors_impl.h  error_handler.cpp  logger_impl.h  middleware.h  middleware_chain.cpp  rate_limiter_impl.h  request_id.cpp  session.cpp
mycppwebfw/src/routing/: parameter_parser.h  route_group.h  route_matcher.cpp  router.cpp  router.h
mycppwebfw/src/security/: headers.h
mycppwebfw/src/ssl/: tls_context.h
mycppwebfw/src/staticfiles/: static_handler.h
mycppwebfw/src/utils/: api_key_registry.cpp  compressor.cpp  compressor.h  config.cpp  cors_policy.cpp  cors_policy.h  error_renderer.cpp  error_renderer.h  file_server.cpp  file_server.h  jwt_parser.cpp  logger.cpp  logger.h  request_id_generator.cpp  session_store.cpp  token_bucket.cpp  token_bucket.h
mycppwebfw/tests/: CMakeLists.txt
mycppwebfw/tests/auth_tests/: jwt_auth_test.cpp
mycppwebfw/tests/core_tests/: buffer_pool_test.cpp  connection_test.cpp  middleware_test.cpp  parser_test.cpp  server_test.cpp  thread_pool_test.cpp
mycppwebfw/tests/form_tests/: multipart_test.cpp
mycppwebfw/tests/http_tests/: parser_test.cpp  response_test.cpp
mycppwebfw/tests/json_tests/: json_adapter_test.cpp
mycppwebfw/tests/middleware_tests/: auth_test.cpp  cors_test.cpp  error_handler_test.cpp  middleware_chain_test.cpp  request_id_test.cpp  session_test.cpp
mycppwebfw/tests/routing_tests/: router_test.cpp
mycppwebfw/tests/security_tests/: csrf_test.cpp
mycppwebfw/tests/session_tests/: session_manager_test.cpp
mycppwebfw/tests/ssl_tests/: tls_context_test.cpp
mycppwebfw/tests/staticfiles_tests/: static_handler_test.cpp
mycppwebfw/tests/utils_tests/: config_test.cpp  logger_test.cpp
mycppwebfw/tests/websocket_tests/: websocket_test.cpp
mycppwebfw/tools/codegen/: CMakeLists.txt  codegen.cpp
src/core/: signal_handler.cpp  thread_pool.cpp
src/middleware/: auth.cpp  error_handler.cpp  logger.cpp  rate_limiter.cpp  request_id.cpp  session.cpp
src/utils/: middleware_utils.cpp  request_id_generator.cpp
tests/core/: thread_pool_test.cpp
tests/middleware_tests/: base_middleware_test.cpp  request_id_test.cpp
